--- a/Alex Fitness/css/style.css
+++ b/Alex Fitness/css/style.css
@@ -1,6 +1,6 @@
-/*=======================================
+/*------------------------------------------
                 Fonts
-=========================================*/
+--------------------------------------------*/
 
 /* Butler */
 @font-face {
@@ -81,7 +81,9 @@
     font-weight: 700;
     font-style: normal;
 }
-
+/*------------------------------------------
+                Global
+--------------------------------------------*/
 html { 
     height: 100%;
     font-size: 62.5%;  /* 10px */  
@@ -108,6 +110,12 @@ h3 {
    font: 500 3.5rem/4.5rem 'Butler', serif;
    color: #12161b;
 }
+a {
+    text-decoration: none;
+    -webkit-transition: color 300ms;
+            transition: color 300ms;
+    font-weight: 400;
+}
 [type=button],
 [type=reset],
 [type=submit],
@@ -115,6 +123,25 @@ button {
     -webkit-appearance: none;
 }
 button:focus { outline: 0; }
+.btn {
+    width: 14rem;
+    padding: 1.4rem 2rem;
+    border-radius: 5rem;
+    font-weight: 700;
+    font-size: 1.4rem;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: .2em;
+    -webkit-transition: ease .5s;
+    -moz-transition: ease .5s;
+    -o-transition: ease .5s;
+    transition: ease .5s;
+}
+
+.btn:hover {
+    color: #fff;
+}
+
 section h2:after {
     content: '';
     width: 12.7rem;
@@ -130,13 +157,20 @@ section h2.text-white:after { background: #fff; }
     z-index: 1;
 }
 
+/*------------------------------------------
+                Header
+--------------------------------------------*/
 header {
-    width: 100%;
-    max-width: 180rem;
-    margin: 0 auto;
+    background: #fff;
+    padding: 33px 45px 32px;
+}
+.scroll-not-top header {
+    padding: 10px 45px;
+    -webkit-box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05);
+    box-shadow: 0 4px 12px 0 rgba(0, 0, 0, .05);
 }
 
-
+/* Logo */
 .logo {
     font: 500 6.4rem/7rem 'Butler', serif;
     color: #383d5c;
@@ -145,30 +179,195 @@ header {
     color: #383d5c;
     text-decoration: none;
 }
-.btn {
-    width: 14rem;
-    padding: 1.4rem 2rem;
-    border-radius: 5rem;
-    font-weight: 700;
-    font-size: 1.4rem;
-    color: #fff;
-    text-transform: uppercase;
-    letter-spacing: .2em;
-    -webkit-transition: ease 0.5s;
-    -moz-transition: ease 0.5s; 
-      -o-transition: ease 0.5s;
-         transition: ease 0.5s;
+.scroll-not-top header,
+.scroll-not-top .logo {
+    -webkit-transition: ease .5s;
+    -moz-transition: ease .5s;
+    -o-transition: ease .5s;
+    transition: ease .5s;
 }
-.btn:hover { color: #fff; }
-
+.scroll-not-top .logo {
+    font-size: 5rem;
+}
+/* Buttons */
 .btn--pink { background: #f64ea3; }
 .btn--pink:hover { background: #c43e82; }
 
 .btn--dark { background: #383d5c; }
 .btn--dark:hover { background: #272a40; }
 
+/* Navigation */
+header nav ul {
+    padding-left: 0;
+    margin: 0;
+    list-style: none;
+}
+header nav ul li {
+    display: inline-block;
+}
+header nav ul li:nth-child(2) {
+    margin: 0 5rem;
+}
+header nav ul li a {
+    font-size: 1.4rem;
+    letter-spacing: .2em;
+    color: #00204a;
+}
+header nav ul li a:hover {
+    text-decoration: none;
+}
+/* Toogle Menu */
+.open-nav {
+    width: 3rem;
+    height: 2rem;
+    position: relative;
+    margin-bottom: 2.5rem;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+       -moz-transition: .5s ease-in-out;
+         -o-transition: .5s ease-in-out;
+            transition: .5s ease-in-out;
+    cursor: pointer;
+    z-index: 3;
+}
+.open-nav span{
+    display: block;
+    position: absolute;
+    height: .3rem;
+    width: 100%;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+       -moz-transform: rotate(0deg);
+         -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+       -moz-transition: .25s ease-in-out;
+         -o-transition: .25s ease-in-out;
+            transition: .25s ease-in-out;
+}
+
+.open-nav span { background: #383d5c; }
+.open-nav span:nth-child(1) {
+    top: 0;
+}
+.open-nav span:nth-child(2),
+.open-nav span:nth-child(3) {
+    top: 1rem;
+}
+.open-nav span:nth-child(4) { 
+    top: 2rem;
+}
+.open-nav.open span:nth-child(1),
+.open-nav.open span:nth-child(4) {
+    top: 1.1rem;
+    width: 0;
+    left: 50%;
+}
+.open-nav.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+       -moz-transform: rotate(45deg);
+         -o-transform: rotate(45deg);
+            transform: rotate(45deg);
+}
+
+.open-nav.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+       -moz-transform: rotate(-45deg);
+         -o-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+}
+
+/* Search */
+.search-box {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(255, 255, 255, .95);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: opacity .35s, visibility .35s;
+         -o-transition: opacity .35s, visibility .35s;
+            transition: opacity .35s, visibility .35s;
+    overflow: hidden;
+}
+.search-box.open {
+    height: 100%;
+    opacity: 1;
+    visibility: visible;
+    z-index: 9999;
+}
+.close {
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    opacity: 1;
+    cursor: pointer;
+    -webkit-transition: ease-out .5s;
+       -moz-transition: ease-out .5s;
+         -o-transition: ease-out .5s;
+            transition: ease-out .5s;
+}
+.close:hover {
+    -webkit-transform: rotate(90deg);
+       -moz-transform: rotate(90deg);
+        -ms-transform: rotate(360deg);
+         -o-transform: rotate(360deg);
+            transform: rotate(90deg);
+}
+input[type=search] {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    width: 80%;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    margin: auto;
+    border: 0;
+    font: 400 10rem/3.6rem 'Ebrima', sans-serif;
+    background: transparent;
+    color: #000;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    outline: none;
+    caret-color: #f64ea3;
+        
+}
+input[type=search]::-webkit-input-placeholder { color: #000; }
+input[type=search]:-ms-input-placeholder { color: #000; }
+input[type=search]::-moz-placeholder { 
+    color: #000;  
+    opacity: 1;
+}
+input[type=search]:-moz-placeholder {
+    color: #000;
+    opacity: 1;
+    -webkit-appearance: none;
+}
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+    -webkit-appearance: none;
+}
+
+section:not(.hero) {
+    display: none;
+}
+
+
+
 .hero {
     background: url("../assets/hero.jpg") no-repeat center center / cover ;
+
 }
 
 .hero__container {
@@ -186,21 +385,12 @@ header {
     position: absolute;
     top: 50%;
     -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    text-shadow: -8px 8px 14px rgba(0, 0, 0, 0.7);
+    z-index: 1;
 }
 
-@media (min-width: 480px) {
-    .hero__container h1 {
-        font-size: calc(1.6rem + ((1vw - 3.2px) * 22.375));
-        /* font-size: calc(1.6rem + ((1vw - 0.3rem) * 39.7778)); */
-    }
-}
-@media (min-width: 1920px) {
-    .hero__container h1 {
-        font-size: 37.4rem;
-    }
-}
 .hero__container .model {
       position: absolute;
       right: 0;
@@ -359,6 +549,7 @@ header {
 
 footer ul {
     list-style: none;
+    padding-left: 0;
 }
 footer ul li a {
     font-size: 1.6rem;
