--- a/Digital/css/style.css
+++ b/Digital/css/style.css
@@ -110,18 +110,6 @@
     font-style: normal;
 }
 
-/*Berlin Sans*/
-@font-face {
-    font-family: 'Berlin Sans FB Demi';
-    src: url('../fonts/BerlinSansFBDemi-Bold.eot');
-    src: url('../fonts/BerlinSansFBDemi-Bold.eot?#iefix') format('embedded-opentype'),
-        url('../fonts/BerlinSansFBDemi-Bold.woff2') format('woff2'),
-        url('../fonts/BerlinSansFBDemi-Bold.ttf') format('truetype'),
-        url('../fonts/BerlinSansFBDemi-Bold.svg#BerlinSansFBDemi-Bold') format('svg');
-    font-weight: bold;
-    font-style: normal;
-}
-
 /*Font Awesome*/
 @font-face {
     font-family: 'Font Awesome 5 Free';
@@ -302,33 +290,34 @@ button {
 header {
     width: 100%;
     padding: 1rem 5rem;
-    position: fixed;
+    position: absolute;
     top: 0;
-    -webkit-transition: top .3s ease;
-         -o-transition: top .3s ease;
-       -moz-transition: top .3s ease;
-            transition: top .3s ease;
+    -webkit-transition: all .4s ease;
+         -o-transition: all .4s ease;
+       -moz-transition: all .4s ease;
+            transition: all .4s ease;
+    z-index: 9999;
+    background: transparent;
+    box-shadow: none;
 }
-.nav-down {
-    z-index: 1001;
-    background-color: #fff;
-    box-shadow: 0px 2px 40px 0px rgba(0, 0, 0, 0.08);
-}
-.nav-up {
-    top: -7.6rem;
+.sticky {
+    position: fixed;
+    background: #fff;
+    box-shadow: 0 2px 40px 0 rgba(0, 0, 0, 0.08);
 }
 
 .logo {
     width: 162px;
     height: 56px;
 }
-.nav-down .letter {
+.sticky .letter {
     fill: #fc9e20;
 }
-.nav-down nav a {
+
+.sticky nav a {
     color: #000;
 }
-.nav-down nav a:hover {
+.sticky nav a:hover {
     color: #fc9e20;
 }
 
@@ -431,6 +420,7 @@ nav a:hover { color: #020202; }
     background-image: url(../assets/letter-bg.jpg);
     background-size: cover;
     background-position: center center;
+    position: absolute;
     top: -7rem;
     right: -8rem;
     left: 0;
@@ -439,7 +429,7 @@ nav a:hover { color: #020202; }
 .about-us h1:before {
     content: 'A';
     width: 100%;
-    text-shadow: 0 0 75px rgba(0, 0, 0, .7);
+    text-shadow: 0 0 40px rgba(0, 0, 0, .5);
     display: block;
     position: absolute;
     z-index: -1;
@@ -474,6 +464,7 @@ nav a:hover { color: #020202; }
             transform: translateY(-50%);
     left: 0;
     right: 0;
+    z-index: 1;
 }
 .white-box h2 {
     font: 400 5rem/6rem 'Bernadette', sans-serif;
@@ -522,6 +513,8 @@ nav a:hover { color: #020202; }
 .services__text {
     max-width: 50rem;
     margin-right: 18.5rem;
+    padding-top: 9rem;
+    padding-bottom: 9rem;
 }
 /*------------------------------------------
                 Socials
@@ -529,7 +522,7 @@ nav a:hover { color: #020202; }
 .socials {
     position: relative;
     background: url('../assets/socials-bg.jpg') no-repeat center center / cover;
-    height: 40rem;
+
 }
 .socials:after {
     content: '';
@@ -568,36 +561,37 @@ nav a:hover { color: #020202; }
             transition: ease .4s;
 }
 .socials .fab:before {
-    display: block;
     line-height: 7.5rem;
-    text-align: center;
 }
 
-.fa-behance:hover {
+.socials .fa-behance:hover {
     border-color: #1769ff;
     background: #1769ff;
 }
-.fa-dribbble:hover {
+.socials .fa-dribbble:hover {
     border-color: #ea4c89;
     background: #ea4c89;
 }
-.fa-youtube:hover {
+.socials .fa-youtube:hover {
     border-color: #ff0000;
     background: #ff0000;
 }
-.fa-linkedin-in:hover {
+.socials .fa-linkedin-in:hover {
     border-color: #0077b5;
     background: #0077b5;
 }
-.fa-instagram:hover {
+.socials .fa-instagram:hover {
     background: -webkit-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     background: -moz-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     background: -o-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
     background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
 }
-.fa-facebook-f:hover {
+.socials .fa-facebook-f:hover {
     border-color: #3b5998;
     background: #3b5998;
+}
+.social-icons {
+    padding-bottom: 10.5rem;
 }
 /*------------------------------------------
             Team
@@ -705,7 +699,7 @@ footer {
 }
 
 .skills {
-    max-width: 55rem;
+    max-width: 60rem;
     padding-right: 7rem;
 }
 
@@ -738,7 +732,62 @@ footer {
     color: #333332;
 }
 
+.anita__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.soc a {
+    margin-right: 2rem;
+}
+.soc a:last-child {
+    margin-right: 0;
+}
+.soc .fab {
+    width: 6rem;
+    height: 6rem;
+    border-radius: 50%;
+    background: #fff;
+    position: relative;
+    z-index: 1;
+    font-size: 3rem;
+    color: #272525;
+    -webkit-transition: ease .4s;
+       -moz-transition: ease .4s;
+         -o-transition: ease .4s;
+            transition: ease .4s;
+}
 
+.soc .fab:before {
+    display: block;
+    text-align: center;
+    line-height: 6rem;
+}
+
+.soc .fa-facebook-f:hover {
+    background: #3b5998;
+    color: #fff;
+}
+.soc .fa-behance:hover {
+    background: #1769ff;
+    color: #fff;
+}
+.soc .fa-linkedin-in:hover {
+    background: #0077b5;
+    color: #fff;
+}
+
+.socials .fa-instagram:hover {
+    background: -webkit-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background: -moz-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background: -o-radial-gradient(30% 107%, circle, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+}
+
+.socials .fa-facebook-f:hover {
+    border-color: #3b5998;
+    
+}
 /*------------------------------------------
                 Back to Top
 --------------------------------------------*/
@@ -769,4 +818,85 @@ footer {
 
 .back-top .arrow {
     fill: #fff;
+}
+
+/* Toogle Menu */
+.open-nav {
+    width: 3rem;
+    height: 2rem;
+    position: relative;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .5s ease-in-out;
+    -moz-transition: .5s ease-in-out;
+    -o-transition: .5s ease-in-out;
+    transition: .5s ease-in-out;
+    cursor: pointer;
+    z-index: 3;
+}
+
+.open-nav span {
+    display: block;
+    position: absolute;
+    height: .3rem;
+    width: 100%;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -ms-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
+}
+
+.open-nav span {
+    background: #fff;
+}
+.sticky .open-nav span {
+    background: #000;
+}
+
+.open-nav span:nth-child(1) {
+    top: 0;
+}
+
+.open-nav span:nth-child(2),
+.open-nav span:nth-child(3) {
+    top: 1rem;
+}
+
+.open-nav span:nth-child(4) {
+    top: 2rem;
+}
+.open-nav.open span {
+    background: #fc9e20;
+}
+
+.open-nav.open span:nth-child(1),
+.open-nav.open span:nth-child(4) {
+    width: 0;
+    top: 1.1rem;
+    left: 50%;
+}
+
+.open-nav.open span:nth-child(2) {
+    -webkit-transform: rotate(45deg);
+    -moz-transform: rotate(45deg);
+    -o-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.open-nav.open span:nth-child(3) {
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
 }
