--- a/Digital/css/style.css
+++ b/Digital/css/style.css
@@ -676,9 +676,9 @@ button {
     background: #fff;
     position: absolute;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%); 
-            transform: translateY(-50%);
+    -webkit-transform: translateY(-50%) !important;
+        -ms-transform: translateY(-50%) !important; 
+            transform: translateY(-50%) !important;
     left: 0;
     right: 0;
     z-index: 1;
@@ -709,9 +709,9 @@ button {
     border-radius: 10px;
     position: absolute;
     top: 50%;
-    -webkit-transform: translateY(-50%);
-        -ms-transform: translateY(-50%);
-            transform: translateY(-50%);
+    -webkit-transform: translateY(-50%) !important;
+        -ms-transform: translateY(-50%) !important;
+            transform: translateY(-50%) !important;
     left: -13.5rem;   
     -webkit-box-shadow: 3px 4px 49px 0 rgba(0, 0, 0, 0.07);
             box-shadow: 3px 4px 49px 0 rgba(0, 0, 0, 0.07);
@@ -896,7 +896,7 @@ button {
 
 /* Gradient price box */
 .price-box--gradient {
-    padding: 9rem 3.5rem 4rem;
+    padding: 9rem 3.5rem 4.4rem;
     margin-left: -1.5rem;
     font-family: 'Myriad Pro', sans-serif;
     -webkit-box-shadow: 3px 4px 49px 0 rgba(0, 0, 0, 0.1);
@@ -954,6 +954,7 @@ button {
     -webkit-flex: 1 0 16.6666667%;
         -ms-flex: 1 0 16.6666667%;
             flex: 1 0 16.6666667%;
+    z-index: 1;
 }
 
 .social-icon__link .fab {
